# ai-council

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.html  README.md  council  it-department-memo.docx  package.json  pyproject.toml
.claude/agents/: airline-commercial-strategist.md  airport-ceo.md  airport-coo.md  airport-emergency-management-director.md  airport-procurement-expert.md  architectural-historian.md  aviation-historian.md  chief-engineer.md  contrarian.md  council-ada.md  council-aristotle.md  council-aurelius.md  council-feynman.md  council-kahneman.md  council-karpathy.md  council-lao-tzu.md  council-machiavelli.md  council-meadows.md  council-munger.md  council-musashi.md  council-rams.md  council-socrates.md  council-sun-tzu.md  council-sutskever.md  council-taleb.md  council-torvalds.md  council-watts.md  deep-research.md  director-of-public-safety.md  editor.md  emergency-management-consultant.md  fact-checker.md  humanizer.md  infrastructure-economist.md  operations-analyst.md  presentation-designer.md  red-team.md  regulatory-political-analyst.md  slacker.md  strategist.md  (+4 more)
cli/: __init__.py  __main__.py  agents.py  archive.py  audit.py  checkpoints.py  config.py  docx_builder.py  events.py  interactive.py  menu.py  orchestrator.py  publish.py  revise.py  runfile.py  server.py  sources.py
docs/: claude-code-setup.md  how-to-propose-an-agent-change.md  how-to-run.md  methodology.md
prompts/: orchestration.md  start-a-run.md
runs/: _audit-2026-05-29.md  _audit-2026-06-10.md
scripts/: build_it_memo.py  sync-agents.mjs
(+288 files in other folders)
